--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </head>
 <body>
 
+<!-- push container -->
+<div id="push-container" class="div-conrainer"></div>
+
 <div id="game" class="game-view view"></div>
 
 <div id="site-interface" class="site-wrapper">
@@ -119,10 +122,10 @@
 
     </div>
 
-
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
+
 <script src="./lib/jquery.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 
