--- a/index.html
+++ b/index.html
@@ -60,36 +60,7 @@
 
                 <div id="leaderboard" class="leaderboard-view view" hidden>
 
-                    <div class="inner cover">
-                        <h1 class="cover-heading">Leaderboard</h1>
-                        <div class="col-md-3"></div>
-                        <div class="col-md-6">
-                            <table  class="table table-bordered table-condensed Leader-table">
-                                <thead>
-                                <tr>
-                                    <th>Nickname</th>
-                                    <th>Score</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td>Serega</td>
-                                    <td>100</td>
-                                </tr>
-                                <tr>
-                                    <td>Masha</td>
-                                    <td>99</td>
-                                </tr>
-                                <tr>
-                                    <td>Loshara3000</td>
-                                    <td>56</td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-
-                        <div class="col-md-3"></div>
-                    </div>
+                    <!-- leader board -->
 
                 </div>
 
