Add controller system

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
                 <div class="masthead clearfix">
                     <div class="inner">
-                        <h3 class="masthead-brand" id="AcyclicReference"><a href="/main"> Cyclyc </a></h3>
+                        <h3 class="masthead-brand" id="AcyclicReference"><a href="/"> Cyclyc </a></h3>
                         <ul class="nav masthead-nav">
-                            <li><a href="#" id="registered" > Guest </a></li>
+                            <li><a href="/" id="registered" > Guest </a></li>
                             <li id="aboutReference"><a href="/about"> About </a></li>
                         </ul>
                     </div>
@@ -56,7 +56,7 @@
 
                 <div id="login" class="inner cover login-view view" hidden>
                 </div>
-                <div id="login_warning"></div>
+
 
                 <div id="leaderboard" class="leaderboard-view view" hidden>
 
@@ -77,8 +77,6 @@
                     </div>
 
                     <div class="col-md-3"></div>
-
-                    <div id="registration_warning"></div>
                 </div>
 
                 <div class="mastfoot" >
